Fix rendering of submenu on Firefox
It seems display: inherit doesn't operate the same on Firfox as on
Chromium based browsers.  This makes the submenu render at the desired
position in both browsers.

--- a/src/menu-dropdown.css
+++ b/src/menu-dropdown.css
@@ -37,7 +37,7 @@ button.selected, button:hover {
   margin-right:0.75em;
 }
 .solid-uic-dropdown-menu ul li:hover > ul {
-  display:inherit;
+  display:block;
 }
 .solid-uic-dropdown-menu ul ul li {
   width:230px;
